SBVTestSuite/TestSuite/CompileTests/SCase/SCase25.stderr
SCase25.hs:(11,14)-(19,8): Splicing expression
    ghc-internal:GHC.Internal.TH.Quote.quoteExp
      sCase
      " e of\n\
      \         Var s     | s .== literal \"a\"                       -> 0\n\
      \                   | s .== literal \"b\" .|| s .== literal \"c\" -> 1\n\
      \                   | sTrue                                   -> 2\n\
      \\n\
      \         Num i     | sTrue                                   -> 3\n\
      \\n\
      \         _                                                   -> 6\n\
      \      "
  ======>
    ite
      ((.&&) (isVar e) ((\ s -> s .== literal "a") (getVar_1 e)))
      ((\ s -> const 0 s) (getVar_1 e))
      (ite
         ((.&&)
            (isVar e)
            ((\ s -> s .== literal "b" .|| s .== literal "c") (getVar_1 e)))
         ((\ s -> const 1 s) (getVar_1 e))
         (ite
            (isVar e) ((\ s -> const 2 s) (getVar_1 e))
            (ite (isNum e) ((\ i -> 3) (getNum_1 e)) 6)))
SCase25.hs:11:14: error: [GHC-40910] [-Wunused-matches, Werror=unused-matches]
    Defined but not used: i
   |
11 | f e = [sCase| e of
   |              ^^^^^...

